# vec23

./: CMakeLists.txt  LICENSE  README.md
include/: Vector2.h
include/Vec23/: Constants.h  Quaternion.h  Vec23.ixx  Vector2.h  Vector3.h
scripts/: generate_vs.ps1  generate_xcode.sh  regenerate_vs.ps1  regenerate_xcode.sh
test/: QuaternionTest.cpp  Vector2Test.cpp  Vector3Test.cpp
